# django-taskmanager

./: .env.template  README.md  pyproject.toml  requirements.txt
taskmanager/main/: admin.py  forms.py  models.py  urls.py  views.py
taskmanager/main/templates/main/: about.html  base.html  create.html  index.html
taskmanager/taskmanager/: settings.py
