[project]
name = "taskmanager"
version = "0.1.0"
description = "Task Manager web application built with Django"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Ivan Romanov" }
]
dependencies = [
    "django==5.1.0",
    "python-dotenv==1.0.1",
    "ruff==0.1.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["taskmanager"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "COM", # flake8-commas
    "T20", # flake8-print
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 80
